--- a/index.html
+++ b/index.html
@@ -1,17 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>to2rent</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=PT+Serif&family=Roboto+Condensed&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/reset.css">
+  <link rel="stylesheet" href="css/slick.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-  
+
+  <header class="header">
+    <div class="header__logo logo">
+      <a class="logo__link" href="#">
+        <img class="logo__img" src="images/logo.svg" alt="">
+      </a>
+    </div>
+    <nav class="menu">
+      <ul class="menu__list">
+        <li class="menu__item">
+          <a class="menu__link menu__link--active" href="#">О нас</a>
+        </li>
+        <li class="menu__item">
+          <a class="menu__link" href="#">Дома</a>
+        </li>
+        <li class="menu__item">
+          <a class="menu__link" href="#">Квартиры</a>
+        </li>
+        <li class="menu__item">
+          <a class="menu__link" href="#">Контакты</a>
+        </li>
+      </ul>
+    </nav>
+  </header>
+
+  <section class="slider">
+    <div class="slider__item" style="background-image: url(images/slider-img.jpg);"></div>
+    <div class="slider__item" style="background-image: url(images/slider-img.jpg);"></div>
+    <div class="slider__item" style="background-image: url(images/slider-img.jpg);"></div>
+  </section>
+
+
+  <section class="search">
+    <div class="search__wrapper">
+      <form class="search__form">
+        <label class="search__form-label">Поиск Аппартаментов</label>
+        <input class="search__form-input" type="text" placeholder="Введите город">
+        <button class="search__form-btn" type="submit">Найти</button>
+      </form>
+    </div>
+  </section>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="js/slick.min.js"></script>
   <script src="js/main.js"></script>
 </body>
+
 </html>
