--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-
+  <!-- ! HEADER -->
   <header class="header">
     <div class="header__logo logo">
       <a class="logo__link" href="#">
@@ -24,38 +24,190 @@
     </div>
     <nav class="menu">
       <ul class="menu__list">
+
         <li class="menu__item">
           <a class="menu__link menu__link--active" href="#">О нас</a>
         </li>
+
         <li class="menu__item">
           <a class="menu__link" href="#">Дома</a>
         </li>
+
         <li class="menu__item">
           <a class="menu__link" href="#">Квартиры</a>
         </li>
+
         <li class="menu__item">
           <a class="menu__link" href="#">Контакты</a>
         </li>
+
       </ul>
     </nav>
   </header>
 
+  <!-- ! SLIDER -->
   <section class="slider">
     <div class="slider__item" style="background-image: url(images/slider-img.jpg);"></div>
     <div class="slider__item" style="background-image: url(images/slider-img.jpg);"></div>
     <div class="slider__item" style="background-image: url(images/slider-img.jpg);"></div>
   </section>
 
-
+  <!-- ! SEARCH -->
   <section class="search">
     <div class="search__wrapper">
       <form class="search__form">
-        <label class="search__form-label">Поиск Аппартаментов</label>
+        <label class="search__form-label">Поиск Апартаментов</label>
         <input class="search__form-input" type="text" placeholder="Введите город">
         <button class="search__form-btn" type="submit">Найти</button>
       </form>
     </div>
   </section>
+
+  <!-- !POPULAR -->
+  <section class="popular">
+    <h3 class="popular__title title">Самые популярные варианты</h3>
+    <div class="container">
+      <div class="popular__inner">
+
+        <div class="popular__item">
+          <img class="popular__item-img" src="images/popular-1.jpg" alt="">
+          <h5 class="popular__item-title">Апартаменты<br> Москва</h5>
+          <a class="popular__item-link" href="#">детали</a>
+        </div>
+
+        <div class="popular__item">
+          <img class="popular__item-img" src="images/popular-2.jpg" alt="">
+          <h5 class="popular__item-title">Апартаменты<br> Киев</h5>
+          <a class="popular__item-link" href="#">детали</a>
+        </div>
+
+        <div class="popular__item">
+          <img class="popular__item-img" src="images/popular-3.jpg" alt="">
+          <h5 class="popular__item-title">Коттедж Modern<br> Лос Анджелес</h5>
+          <a class="popular__item-link" href="#">детали</a>
+        </div>
+
+        <div class="popular__item">
+          <img class="popular__item-img" src="images/popular-4.jpg" alt="">
+          <h5 class="popular__item-title">Коттедж Семейный<br> Лондон</h5>
+          <a class="popular__item-link" href="#">детали</a>
+        </div>
+
+      </div>
+    </div>
+  </section>
+
+  <!-- ! ADVANTAGES -->
+  <section class="advantages">
+    <div class="container">
+      <div class="advantages__inner">
+
+        <div class="advantages__item">
+          <h4 class="advantages__item-title advantages__item-title--icon-1">Мы экономим Ваше время и Ваши деньги</h4>
+          <p class="advantages__item-text">Вы можете легко подобрать себе самую лучшую недвижимость для аренды на нашем
+            сайте по выгодной цене. Наши менеджеры с удовольствием помогут Вам и ответят на все вопросы.</p>
+          <a class="advantages__item-link" href="#">Подробнее</a>
+        </div>
+
+        <div class="advantages__item">
+          <h4 class="advantages__item-title advantages__item-title--icon-2">Арендуйте лучшую недвижимость в крупных
+            городах</h4>
+          <p class="advantages__item-text">Наша база элитной недвижимости насчитывает более 5000 вариантов в крупных
+            городах мира.Мы поможем Вам выбрать самую лучшую, также предоставим дополнительный сервис</p>
+          <a class="advantages__item-link" href="#">Подробнее</a>
+        </div>
+
+      </div>
+    </div>
+  </section>
+
+  <!-- ! BOOK -->
+  <section class="book" style="background-image: url(images/book-bg.jpg);">
+    <div class="container">
+      <h3 class="book__title">Коттедж Modern Лос Анджелес</h3>
+      <a class="book__button" href="#">Забронировать</a>
+    </div>
+  </section>
+
+
+  <!-- ! ABOUT -->
+  <section class="about">
+    <div class="container">
+      <div class="about__inner">
+        <div class="about__managers">
+          <h4 class="about__managers-title about__title">Наши менеджеры</h4>
+          <div class="about__managers-items">
+
+            <div class="about__managers-item">
+              <img class="about__managers-img" src="images/manager-1.jpg" alt="">
+              <ul class="about__managers-list">
+                <li class="about__managers-namet">Макс</li>
+                <li class="about__managers-age">30 лет</li>
+                <li class="about__managers-location">Москва</li>
+              </ul>
+              <button class="about__managers-btn">Связаться</button>
+            </div>
+
+            <div class="about__managers-item">
+              <img class="about__managers-img" src="images/manager-2.jpg" alt="">
+              <ul class="about__managers-list">
+                <li class="about__managers-namet">Анна</li>
+                <li class="about__managers-age">28 лет</li>
+                <li class="about__managers-location">Киев</li>
+              </ul>
+              <button class="about__managers-btn">Связаться</button>
+            </div>
+
+          </div>
+        </div>
+
+        <div class="about__blog">
+          <h4 class="about__title">Блог</h4>
+          <ul class="about__blog-list">
+            <li class="about__blog-item">
+              <a class="about__blog-link" href="#">Системы охраны и видеонаблюдения</a>
+            </li>
+            <li class="about__blog-item">
+              <a class="about__blog-link" href="#">Клубная недвижимость всегда в цене</a>
+            </li>
+            <li class="about__blog-item">
+              <a class="about__blog-link" href="#">Все плюсы от посуточной аренды квартир</a>
+            </li>
+            <li class="about__blog-item">
+              <a class="about__blog-link" href="#">Как выбрать жильё своей мечты в Киеве?</a>
+            </li>
+            <li class="about__blog-item">
+              <a class="about__blog-link" href="#">Топ 10 ВИП коттеджей Лос Анджелеса</a>
+            </li>
+            <li class="about__blog-item">
+              <a class="about__blog-link" href="#">Лучшие аппартаменты с панорамным видом</a>
+            </li>
+            <li class="about__blog-item">
+              <a class="about__blog-link" href="#">Дома для аренды на год в Майами</a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="reviews">
+          <h4 class="about__title">Отзывы</h4>
+          <img class="reviews__img" src="images/reviews.jpg" alt="">
+          <p class="reviews__text">Это лучший сервис по подбору аппартаментов. Пользуюсь услугами To rent уже 5 лет.
+            Всегда идеально и именно то, что мне нужно.</p>
+          <a class="about__reviews-link">Еще отзывы</a>
+        </div>
+
+      </div>
+    </div>
+  </section>
+
+  <!-- ! FOOTER -->
+  <footer class="footer">
+    <div class="container">
+      <div class="footer__top">
+        
+      </div>
+    </div>
+  </footer>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="js/slick.min.js"></script>
