--- a/index.html
+++ b/index.html
@@ -202,12 +202,41 @@
 
   <!-- ! FOOTER -->
   <footer class="footer">
-    <div class="container">
-      <div class="footer__top">
-        
+    <div class="footer__top">
+      <div class="container">
+        <div class="footer__top-inner">
+          <ul class="footer__menu-list">
+            <li class="footer__menu-item">
+              <a class="footer__menu-link" href="#">О нас</a>
+            </li>
+            <li class="footer__menu-item">
+              <a class="footer__menu-link" href="#">Дома</a>
+            </li>
+            <li class="footer__menu-item">
+              <a class="footer__menu-link" href="#">Аппартаменты</a>
+            </li>
+            <li class="footer__menu-item">
+              <a class="footer__menu-link" href="#">Отзывы</a>
+            </li>
+            <li class="footer__menu-item">
+              <a class="footer__menu-link" href="#">Контакты</a>
+            </li>
+          </ul>
+
+          <form class="footer__form">
+            <label class="footer__form-label">Связаться <br> с нами</label>
+            <input class="footer__form-input" type="text" placeholder="Задать вопрос">
+            <button class="footer_form-btn" type="submit">Отправить</button>
+          </form>
+        </div>
       </div>
     </div>
+    <div class="footer__bottom">
+      <img class="footer__logo logo" src="images/logo.svg" alt="">
+    </div>
   </footer>
+
+
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="js/slick.min.js"></script>
