--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 </head>
 
 <body>
-  <!-- ! HEADER -->
+
+
   <header class="header">
     <div class="header__logo logo">
       <a class="logo__link" href="#">
@@ -45,14 +46,14 @@
     </nav>
   </header>
 
-  <!-- ! SLIDER -->
+
   <section class="slider">
     <div class="slider__item" style="background-image: url(images/slider-img.jpg);"></div>
     <div class="slider__item" style="background-image: url(images/slider-img.jpg);"></div>
     <div class="slider__item" style="background-image: url(images/slider-img.jpg);"></div>
   </section>
 
-  <!-- ! SEARCH -->
+
   <section class="search">
     <div class="search__wrapper">
       <form class="search__form">
@@ -63,7 +64,7 @@
     </div>
   </section>
 
-  <!-- !POPULAR -->
+ 
   <section class="popular">
     <h3 class="popular__title title">Самые популярные варианты</h3>
     <div class="container">
@@ -97,7 +98,7 @@
     </div>
   </section>
 
-  <!-- ! ADVANTAGES -->
+
   <section class="advantages">
     <div class="container">
       <div class="advantages__inner">
@@ -121,7 +122,7 @@
     </div>
   </section>
 
-  <!-- ! BOOK -->
+ 
   <section class="book" style="background-image: url(images/book-bg.jpg);">
     <div class="container">
       <h3 class="book__title">Коттедж Modern Лос Анджелес</h3>
@@ -130,7 +131,7 @@
   </section>
 
 
-  <!-- ! ABOUT -->
+
   <section class="about">
     <div class="container">
       <div class="about__inner">
@@ -200,7 +201,7 @@
     </div>
   </section>
 
-  <!-- ! FOOTER -->
+
   <footer class="footer">
     <div class="footer__top">
       <div class="container">
@@ -232,7 +233,7 @@
       </div>
     </div>
     <div class="footer__bottom">
-      <img class="footer__logo logo" src="images/logo.svg" alt="">
+      <img class="footer__logo logo__img" src="images/logo.svg" alt="">
     </div>
   </footer>
 
